--- a/style.css
+++ b/style.css
@@ -1,31 +1,37 @@
-*{
+* {
     font-family: 'Montserrat', sans-serif;
 }
-body{
+
+body {
     margin: 0px;
     padding: 0px;
-   
+
 }
+
 .main-header {
-    background: rgba(255, 144, 14, 0.1);;
+    background: rgba(255, 144, 14, 0.1);
+    ;
 }
 
 
 /* nav start  */
 
 
-.main-nav{
+.main-nav {
     display: flex;
     justify-content: space-between;
-   align-items: center;
-   margin-left: 100px;
-   margin-right: 100px;
+    align-items: center;
+    margin-left: 100px;
+    margin-right: 100px;
 }
-.span-bar{
+
+.span-bar {
     display: flex;
     gap: 20px;
 }
-.span-bar a,li{
+
+.span-bar a,
+li {
     list-style: none;
     text-decoration: none;
 }
@@ -36,24 +42,27 @@ body{
 
 /* header strat  */
 
-.header-detail{
+.header-detail {
     text-align: center;
     height: 220px;
     width: 100%;
 
 }
-.header-detail h2{
+
+.header-detail h2 {
     font-weight: 700;
     font-size: 44px;
 
 }
-.header-detail p{
+
+.header-detail p {
     font-weight: 400;
-font-size: 16px;
-color: #727272;
-margin: 0px 350px;
+    font-size: 16px;
+    color: #727272;
+    margin: 0px 350px;
 }
-.btn-primary{
+
+.btn-primary {
     margin-top: 10px;
     width: 180px;
     height: 64px;
@@ -64,19 +73,20 @@ margin: 0px 350px;
     border-radius: 8px;
     color: white;
 }
-.header-Img{
+
+.header-Img {
     width: 100%;
     align-items: center;
     text-align: center;
-   
-    padding-top:100px;
+
+    padding-top: 100px;
     padding-bottom: 30px;
 }
-    
-    
-    
 
-.header-Img img{
+
+
+
+.header-Img img {
     width: 80%;
     height: 500px;
     align-items: center;
@@ -87,45 +97,49 @@ margin: 0px 350px;
 
 /* main section start  */
 
-.main-section{
+.main-section {
     display: grid;
-    grid-template-columns: repeat(2,1fr);
-    width: 50%;
+    grid-template-columns: repeat(2, 1fr);
+    /* width: 50%; */
     grid-gap: 8px;
-    margin-left: 180px;
-}
-.main-section img{
-    height: 302px;
-    width: 302px;
-   
+    /* margin-left: 180px; */
 }
 
-.main{
+.main-section img {
+    height: 302px;
+    width: 302px;
+
+}
+
+.main {
     display: flex;
     gap: 20px;
     margin-top: 50px;
     width: 100%;
-   padding-left: 150px;
+    padding-left: 150px;
 }
 
-.main-section-1{
-  margin-top: 200px;
-  margin-left: 70px;
+.main-section-1 {
+    padding-top: 200px;
+    padding-left: 70px;
 }
-.main-section-1 h2{
+
+.main-section-1 h2 {
     color: #727272;
-    
+
 }
 
-.color-1{
- color: #131313;
-    
+.color-1 {
+    color: #131313;
+
 }
-.color-2{
+
+.color-2 {
     color: #FF900E;
 
 }
-.main-section-1 p{
+
+.main-section-1 p {
     font-weight: 400;
     font-size: 10px;
     color: #727272;
@@ -134,7 +148,7 @@ margin: 0px 350px;
 
 /* Another section start  */
 
-.Features{
+.Features {
     display: flex;
     background-color: aliceblue;
     margin-top: 60px;
@@ -143,43 +157,55 @@ margin: 0px 350px;
     gap: 30px;
     width: 1135px;
     height: 100%;
-   
-} 
-.Features-Title{
+
+}
+
+.Features-Title {
     width: 100%;
 }
-.Features-header p{
+
+.Features-header p {
     font-weight: 400;
-font-size: 16px;
-width: 100%;
-}
-.Article{
-   padding-left: 40px;
-
-}
-.Article-div{
-    row-gap: 50px;
+    font-size: 16px;
+    width: 100%;
 }
 
-.Article-Image{
+.Article {
+    padding-left: 40px;
+
+}
+
+.Article-div {
+    margin: 5px;
+    padding: 15px;
+    background: #FFFFFF;
+    box-shadow: 0px 4px 30px rgba(0, 0, 0, 0.06);
+    border-radius: 8px;
+}
+
+.Article-Image {
     margin-left: 70px;
 }
-
-.big-btn{
-    width: 242px;
-height: 120px;
-background: #FF900E;
-border-radius: 8px;
-border: none;
-font-weight: 700;
-font-size: 45px;
-margin-top: -100px;
-padding-top: -50px;
-margin-right: 200px;
+.Our-Sponser{
+    text-align: center;
 }
-.small{
+
+.big-btn {
+    width: 242px;
+    height: 120px;
+    background: #FF900E;
+    border-radius: 8px;
+    border: none;
+    font-weight: 700;
+    font-size: 45px;
+    margin-top: -100px;
+    padding-top: -50px;
+    margin-right: 200px;
+}
+
+.small {
     font-weight: 500;
-font-size: 15px;
+    font-size: 15px;
 }
 
 /* box-shadow: 0px 6px 50px rgba(0, 0, 0, 0.06); */
@@ -191,29 +217,30 @@ font-size: 15px;
 
 /* some fact section start  */
 
-main{
+main {
     max-width: 1140px;
     margin: 0;
 }
 
-  .Fact-container{
-  
-    padding-top:60px;
+.Fact-container {
+
+    padding-top: 60px;
     padding-bottom: 30px;
-   
+
     margin-left: 150px;
     width: 100%;
-    }  
+}
+
 /* .Fact-Container p{
     margin-left: 30px;
     text-align: left;
 } */
-.Fact-container.Fact-Title{
+.Fact-container.Fact-Title {
     text-align: center;
     margin-left: 200px;
 }
-   
-.Fact{
+
+.Fact {
     display: flex;
     justify-content: center;
     gap: 45px;
@@ -221,28 +248,33 @@ main{
     text-align: center;
 }
 
+.main-section-1 p {
+    font-size: 18px;
+}
+
 /* fact hover  */
 
-.Fact-details:hover{
+.Fact-details:hover {
     background-color: aqua;
     height: 250px;
     width: 250px;
-    transition:2s;
+    transition: 2s;
     font-size: 25px;
 }
 
-.Fact-details{
-    height:221px;
+.Fact-details {
+    height: 221px;
     width: 221px;
     border: 1px solid #FF900E;
 }
 
-.Fact-details img{
-   padding-top: 25px;
+.Fact-details img {
+    padding-top: 25px;
 }
-.Fact-title p{
-    font-weight: 400;
-    font-size: 10px;
+
+.Fact-title p {
+    font-weight: 700;
+    font-size: 20px;
     margin-bottom: 50px;
 }
 
@@ -255,17 +287,19 @@ main{
 
 /* footer start */
 
-.Our-Sponser{
+.Our-Sponser {
     text-align: center;
 }
-.Our-Sponser p{
+
+.Our-Sponser p {
     width: 480px;
     font-size: 10px;
     font-weight: 400;
     margin-left: 500px;
-   
+
 }
-.Sponser{
+
+.Sponser {
     display: flex;
     justify-content: center;
     gap: 30px;
@@ -273,14 +307,137 @@ main{
     margin-bottom: 50px;
 }
 
-.Last{
+.Last {
     text-align: center;
     border: 1px solid burlywood;
-   padding-top: 20px;
-    position: absolute;
-width: 1240px;
-height: 60px;
-background: #FFF4E7;
-border-radius: 8px;
-margin-left: 90px;
+    padding-top: 20px;
+    
+    width: 1240px;
+    height: 60px;
+    background: #FFF4E7;
+    border-radius: 8px;
+    margin-left: 90px;
+}
+
+
+
+
+
+/* media query start  */
+
+
+
+@media screen and (max-width:576px)  {
+    html,body{
+        width: 100%;
+        height: 100%;
+        margin: 0 auto;
+        padding: 0 auto;
+        overflow-x:hidden ;
+        justify-content: center;
+
+    }
+    .main-nav{
+        flex-direction: column;
+    }
+
+    .header-detail h2{
+        height: 55px;
+      font-size: 40px;
+      font-weight: 650;
+       
+    }
+   
+    .header-detail p{
+       margin: 0;
+       width: 100%;
+    }
+    .btn-primary{
+        margin-top: 10px;
+        margin-bottom: 15px;
+        
+    }
+    .header-Img{
+        margin-top: 15px;
+    }
+    .header-Img img{
+        height: 80%;
+        margin-top: 10px;
+    }
+    /* main section start  */
+
+    .main{
+        flex-direction: column;
+        text-align: center;
+        padding-left: 0;
+    }
+
+   .main-section{
+    grid-template-columns: repeat(1,1fr);
+    margin-left: 0;
+    padding-left: 0;
+    align-items: center;
+   }
+   .main-section-1{
+    margin: 0;
+    padding: 0;
+    text-align: center;
+   }
+   .main-section-1 p{
+ 
+  width: 100%;
+   }
+
+   /* features start  */
+
+   .Features{
+    flex-direction: column-reverse;
+    margin: 0;
+    width: 100%;
+    text-align: center;
+   }
+   .Article-Image img {
+    width: 90%;
+    height: 80%;
+   }
+   .big-btn{
+    height: 90px;
+    width: 200px;
+    
+    font-weight: 600;
+    font-size: 30px;
+    margin-left: 30px;
+   }
+
+
+   /* some fact container start  */
+
+   .Fact-container{
+    padding: 0;
+    margin: 0;
+    width: 100%;
+    text-align: center;
+   }
+   .Fact-title p{
+    font-size: 10px;
+    font-weight: 400px;
+   }
+   .Fact{
+    flex-direction: column;
+    align-items: center;
+   }
+
+   /* footer  */
+
+   .Sponser{
+    flex-direction: column;
+    align-items: center;
+   }
+
+   .Last{
+    width: 90%;
+    margin: 0;
+   margin-left: 18px;
+   padding: 0;
+   }
 }
